@@ -1,6 +1,7 @@
 package org.apache.click.extras.tree;
 
 import lombok.NonNull;
+import lombok.SneakyThrows;
 import org.apache.click.ActionEventDispatcher;
 import org.apache.click.ActionListener;
 import org.apache.click.Context;
@@ -17,10 +18,8 @@ import org.apache.click.util.HtmlStringBuffer;
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.commons.lang.StringUtils;
 
-import java.io.Serial;
 import java.io.Serializable;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -149,7 +148,7 @@ import java.util.StringTokenizer;
  * </ul>
  */
 public class Tree extends AbstractControl {
-  @Serial private static final long serialVersionUID = 1L;
+  private static final long serialVersionUID = 1L;
 
   /** The tree's expand/collapse parameter name: <tt>"expandTreeNode"</tt>. */
   public static final String EXPAND_TREE_NODE_PARAM = "expandTreeNode";
@@ -2029,7 +2028,7 @@ public class Tree extends AbstractControl {
    * user navigates the tree.
    */
   protected class CookieHandler implements JavascriptHandler {
-    @Serial private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 1L;
 
     /** Cookie value delimiter. */
     private final static String DELIM = ",";
@@ -2241,9 +2240,10 @@ public class Tree extends AbstractControl {
      * @param value the cookie's value to prepare
      * @return the prepared value
      */
+    @SneakyThrows
     protected String prepareCookieValue(String value) {
       if (StringUtils.isNotBlank(value)) {
-        value = URLDecoder.decode(value, StandardCharsets.UTF_8);
+        value = URLDecoder.decode(value, "UTF-8");
         value = trimStr(value, "\"");
       }
       return value;
@@ -2375,7 +2375,7 @@ public class Tree extends AbstractControl {
    * will <strong>overwrite</strong> each others session attribute!
    */
   protected class SessionHandler implements JavascriptHandler {
-    @Serial private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 1L;
 
     /**
      * The reserved session key prefix for the selected paths
@@ -2605,7 +2605,7 @@ public class Tree extends AbstractControl {
    * java.util.Map, where the node's id is the key and the entry is the value.
    */
   private static final class Entry implements Serializable {
-    @Serial private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 1L;
 
     /** Number of times this entry was found on the path. */
     private int count = 1;
